--- a/tasks/service.yml
+++ b/tasks/service.yml
@@ -1,6 +1,7 @@
 ---
 
 - name: Upload taskd service file
+  become: true
   template:
     src: taskd.service.j2
     dest: /etc/systemd/system/taskd.service
@@ -10,6 +11,7 @@
   notify: taskd restart service
 
 - name: Upload task-sync service file and timer
+  become: true
   template:
     src: "{{ item }}"
     dest: "/etc/systemd/system/{{ item | replace('.j2', '') }}"
