feat: ajout de tests et amélioration de la documentation
fix: ajout de la

--- a/tasks/certs.yml
+++ b/tasks/certs.yml
@@ -6,6 +6,7 @@
   register: _result
 
 - name: Get CA certificate info
+  become: true
   openssl_certificate_info:
     path: "{{ taskd_ca_cert }}"
     valid_at:
