--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,19 +2,19 @@
 
 - include_tasks: variables.yml
 
-- include_tasks: dependencies/{{ ansible_os_family }}.yml
+# - include_tasks: dependencies/{{ ansible_os_family }}.yml
 
-- include_tasks: system.yml
+# - include_tasks: system.yml
 
-- include_tasks: install.yml
+# - include_tasks: install.yml
 
-- include_tasks: service.yml
+# - include_tasks: service.yml
 
-- include_tasks: configure.yml
+# - include_tasks: configure.yml
 
 - include_tasks: users.yml
 
-- include_tasks: certs.yml
-  when: taskd_selfsigned | bool
+# - include_tasks: certs.yml
+#   when: taskd_selfsigned | bool
 
 - include_tasks: clients.yml
