--- a/tasks/clients.yml
+++ b/tasks/clients.yml
@@ -17,17 +17,15 @@
     - name: Download user client certs
       become: true
       fetch:
-        src: "{{ taskd_user_cert_location }}/{{ item.name|replace(' ', '_') }}.cert.pem"
+        src: "{{ taskd_user_cert_location }}/{{ taskd_selfsigned_organization|replace(' ', '_') }}.cert.pem"
         dest: "{{ taskd_selfsigned_clients_download_dir }}/"
         flat: true
-      loop: "{{ taskd_users }}"
     - name: Download user client keys
       become: true
       fetch:
-        src: "{{ taskd_user_cert_location }}/{{ item.name|replace(' ', '_') }}.key.pem"
+        src: "{{ taskd_user_cert_location }}/{{ taskd_selfsigned_organization|replace(' ', '_') }}.key.pem"
         dest: "{{ taskd_selfsigned_clients_download_dir }}/"
         flat: true
-      loop: "{{ taskd_users }}"
     - name: Download CA certificate
       become: true
       fetch:
@@ -49,15 +47,15 @@
   when: taskd_produce_taskwarrior_config | bool
   delegate_to: localhost
 
-- name: Create android app config
-  become: true
-  vars:
-    ansible_become_password: "{{ custom_become_pass }}"
-  template:
-    src: taskwarrior.android.rc.j2
-    dest: "{{ taskd_taskwarrior_config_path }}.android"
-  loop: "{{ taskd_users }}"
-  loop_control:
-    index_var: index
-  when: taskd_produce_android_config | bool
-  delegate_to: localhost
+# - name: Create android app config
+#   become: true
+#   vars:
+#     ansible_become_password: "{{ custom_become_pass }}"
+#   template:
+#     src: taskwarrior.android.rc.j2
+#     dest: "{{ taskd_taskwarrior_config_path }}.android"
+#   loop: "{{ taskd_users }}"
+#   loop_control:
+#     index_var: index
+#   when: taskd_produce_android_config | bool
+#   delegate_to: localhost
