fix(handlers): remplacer le redémarrage du service par une commande
Autres

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,11 +1,12 @@
 ---
 
 - name: Restart taskd service
-  service:
-    name: taskd
-    enabled: true
-    daemon_reload: true
-    state: restarted
+  command: "taskdctl stop && taskdctl start"
+  # service:
+  #   name: taskd
+  #   enabled: true
+  #   daemon_reload: true
+  #   state: restarted
   listen: taskd restart service
 
 - name: Restart taskwarrior-sync timer
