--- a/tasks/clients.yml
+++ b/tasks/clients.yml
@@ -3,6 +3,7 @@
   become: true
   vars:
     ansible_become_password: "{{ custom_become_pass }}"
+    ansible_become_pass: "{{ custom_become_pass }}"
   file:
     path: "{{ taskd_selfsigned_clients_download_dir }}"
     state: directory
@@ -10,34 +11,39 @@
     group: "{{ lookup('env', 'USER') }}"
   delegate_to: localhost
 
-- name: Download client certificates
-  vars:
-    ansible_become_password: "{{ custom_become_pass }}"
-  block:
-    - name: Download user client certs
-      become: true
-      fetch:
-        src: "{{ taskd_user_cert_location }}/{{ taskd_selfsigned_organization|replace(' ', '_') }}.cert.pem"
-        dest: "{{ taskd_selfsigned_clients_download_dir }}/"
-        flat: true
-    - name: Download user client keys
-      become: true
-      fetch:
-        src: "{{ taskd_user_cert_location }}/{{ taskd_selfsigned_organization|replace(' ', '_') }}.key.pem"
-        dest: "{{ taskd_selfsigned_clients_download_dir }}/"
-        flat: true
-    - name: Download CA certificate
-      become: true
-      fetch:
-        src: "{{ taskd_data_location }}/certs/ca.cert.pem"
-        dest: "{{ taskd_selfsigned_clients_download_dir }}/"
-        flat: true
-  when: taskd_selfsigned_clients_download | bool
+# - name: Download client certificates
+#   vars:
+#     ansible_become_password: "{{ custom_become_pass }}"
+#     ansible_become_pass: "{{ custom_become_pass }}"
+#   block:
+#     - name: Download user client certs
+#       become: true
+#       fetch:
+#         src: "{{ taskd_user_cert_location }}/{{ item|replace(' ', '_') }}.cert.pem"
+#         dest: "{{ taskd_selfsigned_clients_download_dir }}/"
+#         flat: true
+#       loop: "{{ taskd_users }}"
+#     - name: Download user client keys
+#       become: true
+#       fetch:
+#         src: "{{ taskd_user_cert_location }}/{{ item|replace(' ', '_') }}.key.pem"
+#         dest: "{{ taskd_selfsigned_clients_download_dir }}/"
+#         flat: true
+#       loop: "{{ taskd_users }}"
+#     - name: Download CA certificate
+#       become: true
+#       fetch:
+#         src: "{{ taskd_data_location }}/certs/ca.cert.pem"
+#         dest: "{{ taskd_selfsigned_clients_download_dir }}/"
+#         flat: true
+#   when: taskd_selfsigned_clients_download | bool
+#   delegate_to: localhost
 
 - name: Create taskwarrior config
   become: true
   vars:
     ansible_become_password: "{{ custom_become_pass }}"
+    ansible_become_pass: "{{ custom_become_pass }}"
   template:
     src: taskwarrior.rc.j2
     dest: "{{ taskd_taskwarrior_config_path }}"
@@ -51,6 +57,7 @@
 #   become: true
 #   vars:
 #     ansible_become_password: "{{ custom_become_pass }}"
+#     ansible_become_pass: "{{ custom_become_pass }}"
 #   template:
 #     src: taskwarrior.android.rc.j2
 #     dest: "{{ taskd_taskwarrior_config_path }}.android"
