feat(handlers): remplace la commande par un service pour redémarrer taskd

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,15 +1,16 @@
 ---
 
 - name: Restart taskd service
-  command: "taskdctl stop && taskdctl start"
-  # service:
-  #   name: taskd
-  #   enabled: true
-  #   daemon_reload: true
-  #   state: restarted
+  become: true
+  service:
+    name: taskd
+    enabled: true
+    daemon_reload: true
+    state: restarted
   listen: taskd restart service
 
 - name: Restart taskwarrior-sync timer
+  become: true
   service:
     name: taskwarrior-sync.timer
     enabled: true
